# opengeotiff

./: .gitignore  README.md  pyproject.toml  requirements.txt
opengeotiff/: core.py
